--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,6 @@ ul {
     padding-left: 0;
 }
 
-address {
-    margin-top: 30px;
-}
 
 .header-container {
     display: flex;
@@ -121,6 +118,7 @@ address {
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
+    margin: 0;
 }
 
 .hero-title {
@@ -168,16 +166,16 @@ address {
 
 .hang-list {
     display: flex;
+    justify-content: space-between;
 }
 
 .hang-list>.hang-item {
-    flex-basis: calc(100% / 4);
-    padding-right: 30px;
+    flex-basis: calc((100% - 30px * 3) / 4);
 
 }
 
 .hang-item:last-child {
-    padding-right: 0;
+    margin-right: 0;
 }
 
 
@@ -218,6 +216,7 @@ address {
 }
 
 .specialists-item {
+    flex-basis: calc((100% - 30px *3) / 4);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -254,6 +253,10 @@ address {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+} 
+
+.address {
+margin-top: 30px;
 }
 
 .footer-address {
@@ -337,6 +340,10 @@ address {
     flex-wrap: wrap;
     gap: 30px;
     padding-top: 50px;
+}
+.work-item{
+    border: 1px #EEEEEE;
+    flex-basis: calc((100% - 30px * 2) / 3);
 }
 
 .work-class {
